# pointcloud-utils

./: .gitignore  CMakeLists.txt  README.md
include/pc_utils/bound/: box_extract.h
include/pc_utils/common/: common.h  factory.h  point_type.h  utils.h
include/pc_utils/common/detail/: factory.h
include/pc_utils/filter/: cloud_filter.h
include/pc_utils/seg/: ground_estimator.h
src/: box_extract.cpp  common.cpp
src/bound/: box_extract.cpp
src/detail/: constructor_default.h  constructor_params.h  constructor_yaml.h  member_define.h  others_define.h  template_specialization.h  variable_define.h
src/filter/: cloud_filter.cpp
src/seg/: cluster.cpp  ground_estimator.cpp
test/: CMakeLists.txt  test_pc.cpp
test/config/: config.yaml
test/resource/: 000002.pcd  000004.pcd
tools/: CMakeLists.txt  pcd_viz.cpp  pcvt.py
